cros: Paint headers for snap window when in both splitview and overview.

Fix a bug where snapped windows in splitview while still in overview
do not have their headers painted. Make CustomFrameViewAshBase look for
splitview state changes, and repaint the header if the state is snap
left or snap right.

Test: ash_unittests CustomFrameViewAshTest.HeaderVisibility*
Bug: 789378
Change-Id: I7ff65181134205544af2a717a3ee3e3797aa2ad2